// Vitest Snapshot v1

exports[`mermaid > Should not render 1`] = `
"<p>flowchart TB
c1--&gt;a2
subgraph one
a1--&gt;a2
end
subgraph two
b1--&gt;b2
end
subgraph three
c1--&gt;c2
end
one --&gt; two
three --&gt; two
two --&gt; c2</p>
"
`;

exports[`mermaid > Should not render 2`] = `
"<pre><code class=\\"language-md\\">flowchart TB
  c1--&gt;a2
  subgraph one
  a1--&gt;a2
  end
  subgraph two
  b1--&gt;b2
  end
  subgraph three
  c1--&gt;c2
  end
  one --&gt; two
  three --&gt; two
  two --&gt; c2
</code></pre>
"
`;

exports[`mermaid > Should render \`\`\`class 1`] = `"<Mermaid id=\\"mermaid-0\\" code=\\"eNpdjTEOwjAMRfecwiMV4gLMjCAh9QQWRMESTUpsJoTPjutGbcUSxf8/+92eyHwiTBWHAOAj9K831qj9A8eoH4sBKAvQ3b9nYlGbFcbCJFSyxxzlWizm3RaYgs77tPTdesKab7BnNsIRDl6xVMpJYYjMmCJvib2JLi2fVf/05Ftx8y54M7eF8APCy1cA\\"></Mermaid>"`;

exports[`mermaid > Should render \`\`\`er 1`] = `"<Mermaid id=\\"mermaid-0\\" code=\\"eNp1jT0OwjAMhfeewhfIBdgqkoGBgILEboSJLPIjOUEMbe9OKnVoBgbLz89P7yPRjF4wDgDH0cE8K5UnsOPZaKXd6W4cHABDyN+yRaa2AUoVTh6EPDeJlXOyn/gg2X8jvqm785NCM5Y2V+NuF/sHyCtsS3S8F0upFmNXG3DncaqAftXL8ANM5kJr\\"></Mermaid>"`;

exports[`mermaid > Should render \`\`\`gantt 1`] = `"<Mermaid id=\\"mermaid-0\\" code=\\"eNqVU01v2zAMvfdXEAYKtIAzxGk2dLkFCToMWHfqZbeqEp0ItaVAorfm34+UP2A3adHqJJt6j4+P5E45ogsAowjvfKgVAfzhM7u/n223HCBLFUJ71sZYt4Mf698PD2Cs2gVVQ9k4TdY7VVk6AnmokWmsYSy+6KoxGAX7D/EZnYn8+/ISrh772CMorfFAEeIBtS2tTloiWDcSAmXSlnPsGMGXQHtMlHCVxcbx3+wafICsT5Pl8NQQOE/tUx9MGxSC7Mv1BeuImITDur/xv42vDxUSGiAVn7u601kZ7zCXG6sucljMi+VsXszm3/LhessMa6b6iydwYVApxBzMsBgxfM/hRvy6a6gJ56HDjaE3OaiSMHQ0X19BF+9AlyMo0zB05MMmWLJaVYlFGvXKDO6IeKn7Z5V1CCv55L4kc8aeLPfM8FMIanQEBxUi5z1zJgyDOnFYCtsE5HEAnggeEZ6Cc0QdQ2/viZcsfCp6iksGnuQJPEYYJplWSRFvwWjMz1XEL4uJs1uvG3FBdVO2xcipnxDS+kE8cujlrWlRbMXYllSeiGjB/R6yJIO1Z392XYGrFqUKAGmN9ENgipdiL2xvAHnQ9ZCyBS9v9+NyfqnIooed+Vg1bQWJ+uMVfEK1aPwPxhRkQQ==\\"></Mermaid>"`;

exports[`mermaid > Should render \`\`\`git-graph 1`] = `"<Mermaid id=\\"mermaid-0\\" code=\\"eNpLzyxxL0osyOBSUEjOz83NLFHITLFSUPLLL8pNzFGCi6JJB6WWpRYVpyoplFQWpFopBLmGuQYFu+JS7ZGZnpEDxCUw9R6e7h4+QByC0AEAoSMq3Q==\\"></Mermaid>"`;

exports[`mermaid > Should render \`\`\`journey 1`] = `"<Mermaid id=\\"mermaid-0\\" code=\\"eNpVzD0OgzAMhuG9p/gO0KWqumRtpU6ZegKrWGB+YpQYIW4PBAFifT77rXWIgacbYGItw08YNTYSShS0cuK/iQZ8FaZ5WxDw1DCMyeHl4DnbcjL0yUhicnge/NneHB4r3fEmu3Yr7Y5AoWPYE2f5J5aX3WYBdjXD\\"></Mermaid>"`;

exports[`mermaid > Should render \`\`\`mermaid 1`] = `"<Mermaid id=\\"mermaid-0\\" code=\\"eNpLy8kvT85ILCpRCHHiUlBINtTVtUs0ArKKS5PSixILMhTy81KB3ES4RGpeCrJ0SXk+kJsEkk7CJp1RlArSDzY4GaEAaKoCUASqHawKmV+eD+YBNQAAgWYsmw==\\"></Mermaid>"`;

exports[`mermaid > Should render \`\`\`pie 1`] = `"<Mermaid id=\\"mermaid-0\\" code=\\"eNoryEzlUlAoySzJSVUIz0gsUQjLz0lJzc0vKlFIyU8tznvUMLNEISOxLNUeqExBQcktyNPVzyVYScFKwQgq4ujr6RMJEjCGCPj5B7uCuCamXAB+DBmY\\"></Mermaid>"`;

exports[`mermaid > Should render \`\`\`sequence 1`] = `"<Mermaid id=\\"mermaid-0\\" code=\\"eNptkL2OwjAQhHueYq4nuR6dcuKnAAp6SicssUXiFfZGCW/POgSQEN1q5tvZn0jXjnxFG2fqYNoZsGxcRciKAisuF9hS03Aq57DcwwTCjbt/BVXLFNuz9Yolr+ROkoukvZDhEbnADqZFzXyCWOMv8WcihpH/7h9YCMHVVsDnidMeJZwSMGjY139l+C1SAXEtzRH5LWuUKE0QGgQnpjjKngVnp6FeMwL3+ex10bTt2lJ1cZrZO7Hj5DzPn//JprOPFFUd3Y//3AGRcm49\\"></Mermaid>"`;

exports[`mermaid > Should render \`\`\`state 1`] = `"<Mermaid id=\\"mermaid-0\\" code=\\"eNorLkksSXXJTEwvSszVLTPiUlCI1opV0NW1U3BMLsksS+UCioDVQPkK1UABhCK/0lyf/ORs/7Q0sDCCiyKbp2Cl4FoG5QUUpRYXp6agqM9DMwyXel1dFNudEwuKka1H4qPKQxwA4yKbiKQEzUScWtAcEZxclJ+Tg+wMFBF0NRCnIASQTUZRhmE2To21XAApZ4wz\\"></Mermaid>"`;
